kube/02-traefik.yml
kind: Deployment
apiVersion: apps/v1
metadata:
    name: traefik-deployment
    labels:
        app: traefik

spec:
    replicas: 1
    selector:
        matchLabels:
            app: traefik
    template:
        metadata:
            labels:
                app: traefik
        spec:
            serviceAccountName: traefik-account
            containers:
                -   name: traefik
                    image: traefik:v2.9
                    args:
                        - --api.insecure
                        - --providers.kubernetesingress
                        - --entrypoints.web.address=:80
                        - --entryPoints.web.forwardedHeaders.trustedIPs=0.0.0.0/0
                        - --entryPoints.web.forwardedHeaders.insecure
                    ports:
                        -   name: web
                            containerPort: 80
                        -   name: dashboard
                            containerPort: 8080

                -   name: ts-sidecar
                    imagePullPolicy: Always
                    image: "ghcr.io/tailscale/tailscale:v1.36"
                    securityContext:
                        runAsUser: 1000
                        runAsGroup: 1000
