kube/03-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  labels:
    app: backend

spec:
    replicas: 5
    selector:
      matchLabels:
        app: backend
    template:
        metadata:
            labels:
             app: backend
        spec:
            imagePullSecrets:
                -   name: regcred
            containers:
            - name: backend
              image: ghcr.io/gunn-elimination/elimination-2023/backend:v0.01
              ports:
              - containerPort: 80
              resources:
                  requests:
                      memory: "512Mi"
                      cpu: "500m"
                  limits:
                      memory: "1024Mi"
                      cpu: "1000m"
              livenessProbe:
                  httpGet:
                      path: /api/actuator/health/livenessstate
                      port: 80
                  initialDelaySeconds: 60
                  periodSeconds: 10

              readinessProbe:
                  httpGet:
                      path: /api/actuator/health/readinessstate
                      port: 80
                  initialDelaySeconds: 60
                  periodSeconds: 10
