kube/03-backend-services.yml
apiVersion: v1
kind: Service
metadata:
    name: backend-service
    labels:
        app: backend

spec:
    type: NodePort
    ports:
        - port: 80
    selector:
        app: backend
