kube/03-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend
    labels:
        app: elimination
        task: backend

spec:
    replicas: 5
    selector:
        matchLabels:
            app: elimination
            task: backend

    template:
        metadata:
            labels:
                app: elimination
                task: backend
        spec:
            imagePullSecrets:
                -   name: regcred
            containers:
                -   name: backend
                    image: ghcr.io/gunn-elimination/elimination-2023/backend:latest
                    ports:
                        -   containerPort: 80
                    resources:
                        requests:
                            memory: "512Mi"
                            cpu: "500m"
                        limits:
                            memory: "1024Mi"
                            cpu: "1000m"
                    livenessProbe:
                        httpGet:
                            path: /api/actuator/health/liveness
                            port: 80
                        initialDelaySeconds: 60
                        periodSeconds: 10

                    readinessProbe:
                        httpGet:
                            path: /api/actuator/health/readiness
                            port: 80
                        initialDelaySeconds: 60
                        periodSeconds: 2

                    volumeMounts:
                        -   name: spring-yml-config
                            mountPath: /app/application.yml

            volumes:
                -   name: spring-yml-config
                    configMap:
                        name: spring-yml-config

---
apiVersion: v1
kind: Service
metadata:
    name: backend-service

spec:
    type: NodePort
    ports:
        -   name: http
            port: 80
    selector:
        app: elimination
        task: backend
