kube/05-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: elimination-ingress
    annotations:
        kubernetes.io/ingress.class: traefik
        traefik.ingress.kubernetes.io/router.entrypoints: web
        traefik.ingress.kubernetes.io/service.sticky.cookie: "true"

spec:
    rules:
        - http:
            paths:
                # route /api to backend, but exclude /api/actuator using a regex
                - path: /api(?!(/actuator))
                  pathType: Prefix
                  backend:
                      service:
                          name: backend-service
                          port:
                              number: 80


                - path: /
                  pathType: Prefix
                  backend:
                      service:
                          name: frontend-service
                          port:
                              number: 80
